--- a/MotivateMe/MotivateMe.Android/MotivateMe.Android.csproj
+++ b/MotivateMe/MotivateMe.Android/MotivateMe.Android.csproj
@@ -49,6 +49,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Refractored.MvvmHelpers">
+      <Version>1.3.0</Version>
+    </PackageReference>
     <PackageReference Include="sqlite-net-pcl">
       <Version>1.5.231</Version>
     </PackageReference>
