--- a/MotivateMe/MotivateMe.iOS/MotivateMe.iOS.csproj
+++ b/MotivateMe/MotivateMe.iOS/MotivateMe.iOS.csproj
@@ -148,6 +148,9 @@
     <Reference Include="Xamarin.iOS" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Refractored.MvvmHelpers">
+      <Version>1.3.0</Version>
+    </PackageReference>
     <PackageReference Include="Xam.Plugins.Notifier">
       <Version>3.0.1</Version>
     </PackageReference>
